--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "bugs": {
     "url": "https://github.com/DSH132010/Magic-Music-3/issues"
   },
-  "homepage": "https://github.com/DSH132010/Magic-Music-3#readme",
+  "homepage": "https://dsh132010.github.io/Magic-Music-3/",
   "devDependencies": {
     "sass": "^1.41.0"
   }
